--- a/LoginRoles/Web.config
+++ b/LoginRoles/Web.config
@@ -6,7 +6,7 @@
 <configuration>
 	<connectionStrings>
 		<add name="Login"
-			 connectionString="Data Source=DESKTOP-FLC2F9V\SQLEXPRESS;Initial Catalog=II46;Integrated Security=True;TrustServerCertificate=True"
+			 connectionString="Data Source=DESKTOP-FLC2F9V;Initial Catalog=II46;Integrated Security=True;TrustServerCertificate=True"
 			 providerName="System.Data.SqlClient" />
 	</connectionStrings>
 
