--- a/LoginRoles/LoginRoles.vbproj
+++ b/LoginRoles/LoginRoles.vbproj
@@ -142,6 +142,14 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\bootstrap.rtl.css" />
     <Content Include="Content\bootstrap.rtl.min.css" />
+    <Content Include="Content\img\med\Emergencias.jpg" />
+    <Content Include="Content\img\med\Estetoscopio.jpg" />
+    <Content Include="Content\img\med\Hospital.jpg" />
+    <Content Include="Content\img\med\laboratorio.jpg" />
+    <Content Include="Content\img\med\quirofano.jpg" />
+    <Content Include="Content\img\med\rayosx.jpg" />
+    <Content Include="Content\img\med\Sala.jpg" />
+    <Content Include="Content\img\med\telemedicina.jpg" />
     <Content Include="Content\Site.css" />
     <Content Include="Doctores.aspx" />
     <Content Include="favicon.ico" />
