se modifica la ventana de administrador, se crea un repositorio usuarios y modifica citas medicas

--- a/LoginRoles/CitasMedicas.vbproj
+++ b/LoginRoles/CitasMedicas.vbproj
@@ -235,6 +235,7 @@
     <Compile Include="Data\CitasRepository.vb" />
     <Compile Include="Data\DoctorRepository.vb" />
     <Compile Include="Data\PacienteRepository.vb" />
+    <Compile Include="Data\UsuarioRepósitory.vb" />
     <Compile Include="Doctores.aspx.designer.vb">
       <DependentUpon>Doctores.aspx</DependentUpon>
     </Compile>
